RESOLVED FIXED40831
REGRESSION (r61379?): Assertion failure in Element::getURLAttribute() when accessing the src attribute of a script element
https://bugs.webkit.org/show_bug.cgi?id=40831
Summary REGRESSION (r61379?): Assertion failure in Element::getURLAttribute() when ac...
mitz
Reported 2010-06-18 07:32:15 PDT
Patch forthcoming.
Attachments
Fix an apparent typo in HTMLScriptElement::isURLAttribute() (2.96 KB, patch)
2010-06-18 07:39 PDT, mitz
andersca: review+
mitz
Comment 1 2010-06-18 07:39:14 PDT
Created attachment 59106 [details] Fix an apparent typo in HTMLScriptElement::isURLAttribute()
Anders Carlsson
Comment 2 2010-06-18 08:52:18 PDT
Comment on attachment 59106 [details] Fix an apparent typo in HTMLScriptElement::isURLAttribute() r=me!
mitz
Comment 3 2010-06-18 08:56:11 PDT
Darin Adler
Comment 4 2010-06-18 09:27:28 PDT
I am reworking r61379, which I guess I had not tested sufficiently before! My patch included this fix, and I am glad it has been separately dealt with. Along with this problem, I discovered that HTMLMediaElement is also missing isURLAttribute for the src attribute on <video> and <audio> elements.
Note You need to log in before you can comment on or make changes to this bug.