REGRESSION (r61379?): Assertion failure in Element::getURLAttribute() when accessing the src attribute of a script element https://bugs.webkit.org/show_bug.cgi?id=40831

Reviewed by Anders Carlsson.

WebCore:

Test: fast/dom/HTMLScriptElement/isURLAttribute.html

* html/HTMLScriptElement.cpp:
(WebCore::HTMLScriptElement::isURLAttribute): Check for the 'src' attribute.

LayoutTests:

* fast/dom/HTMLScriptElement/isURLAttribute-expected.txt: Added.
* fast/dom/HTMLScriptElement/isURLAttribute.html: Added.



Canonical link: https://commits.webkit.org/52420@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@61410 268f45cc-cd09-0410-ab3c-d52691b4dbfc