WebCore/html/HTMLScriptElement.cpp
@@ -50,7 +50,7 @@ PassRefPtr<HTMLScriptElement> HTMLScriptElement::create(const QualifiedName& tag
 
 bool HTMLScriptElement::isURLAttribute(Attribute* attr) const
 {
-    return attr->name() == sourceAttributeValue();
+    return attr->name() == srcAttr;
 }
 
 bool HTMLScriptElement::shouldExecuteAsJavaScript() const
